# Crud-MVC-Rust-Framework-Actix-Web

./: Cargo.toml  README.md  env
src/: main.rs
src/controllers/: barang_controller.rs  mod.rs
src/models/: barang.rs  mod.rs
src/views/: create.html  index.html  layout.html
