[package]
name = "mvcRust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql", "macros"] }
dotenv = "0.15"
tera = "1.18"
tokio = { version = "1", features = ["full"] }